src/Grammer.txt
<cmd_line> ::= <cmd> (<connector>)*
<cmd> ::= <sim_cmd> (<args> <redirect>?)*
<connector> ::= <pipes> | <logic> | <sequence>
<pipes> ::= "|" <cmd>
<logic> ::= ("&&"|"||") <cmd>
<sequence> ::= ";" <cmd>
<redirect> ::= (">" | ">>") <destination>
<sim_cmd> ::= (strings)
<arg> ::= (strings)
